# PatternRecognize

./: .gitignore  CMakeLists.txt  README.md
scripts/: face_recog.py  img_pca_toy.m  k-neighbor.py  parzen.py
scripts/utils/: DataConvertor.py  DataLoader.py
src/: DataLoader.cpp  DataLoader.h  DataStructure.h  face.cpp  knn.cpp  main.cpp  parzen.cpp
